Fix unitless usage of mathsize https://bugs.webkit.org/show_bug.cgi?id=194940

Patch by Rob Buis <rbuis@igalia.com> on 2019-02-22
Reviewed by Frédéric Wang.

Source/WebCore:

Convert unitless lengths to percentage values to correct the computed
font size.

* mathml/MathMLElement.cpp:
(WebCore::convertToPercentageIfNeeded):
(WebCore::MathMLElement::collectStyleForPresentationAttribute):

LayoutTests:

Tests lengths-1.html and length-3.html now pass.

* TestExpectations:

Canonical link: https://commits.webkit.org/209305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241942 268f45cc-cd09-0410-ab3c-d52691b4dbfc